Grade alignment fix

--- a/css/style.less
+++ b/css/style.less
@@ -293,6 +293,10 @@ h2 {
     table {
       width: 100%;
       text-align: left;
+      
+      td {
+        min-width: 17px;
+      }
     }
     li {
       width: 50%;
